sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.error
AlgShellSort:13: error: value ecart is not a member of Unit
possible cause: maybe a semicolon is missing before `value ecart'?
  }ecart=ecart/2;
   ^